# logsponge-mypy

./: .gitignore  README.md  main.py  mypy.ini  pyproject.toml
.github/workflows/: test.yml
ex/: linearize.py  source_and_function.py
lib/: __init__.py
mylib/: __init__.py
mypy_pkg/: function_hook.py  ls_lib.py  main.md  operation_hook.py  plugin.py  source_hook.py  source_hook2.py  vect_lib.py
plain_examples/: counter.py  googledrive.py  hello_world.py  plot.py  stats.py
reports/: main.tex
tests/: hw2.py  hw4.py  hw5.py  hw6.py  test_plugin.py
typed_data/: hello_world.py  hello_world_typed.py  hw1.py  hw1_typed.py  hw2.py  hw2_typed.py  hw3.py  hw4.py  hw5.py  type.py  type_test.py
